# YCPS-ERTC-Library

./: CMakeLists.txt  README.md
docs/: main-doc.md
include/: all.h  dynamic_memory.h  exceptions.h  extint.h  gc.h  iterable.h  object.h  stack.h
include/containers/: stack.h
include/iterator/: exceptions.h  iterable.h  iterator.h
src/: exceptions.cpp  gc.cpp  object.cpp
test/: gc_test.cpp  main_test.cpp
